# math_lib

./: CMakeLists.txt  README.md  my_math.cpp  my_math.h
